apps/sample-app/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-canary
  namespace: apps
spec:
  selector:
    app: sample-app
  ports:
    - port: 80
      targetPort: 8080
