apps/sample-app/base/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-stable
  namespace: apps
spec:
  selector:
    app: sample-app
  ports:
    - port: 80
      targetPort: 8080
